--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@libsql/client": "^0.3.5-pre.11",
-    "@prisma/adapter-libsql": "^0.2.0",
-    "@prisma/client": "^5.4.0-integration-libsql-adapter.5",
+    "@libsql/client": "^0.3.5",
+    "@prisma/adapter-libsql": "^0.4.0",
+    "@prisma/client": "^5.4.0-dev.47",
     "@remix-run/css-bundle": "^2.0.1",
     "@remix-run/node": "^2.0.1",
     "@remix-run/react": "^2.0.1",
@@ -21,7 +21,7 @@
     "@vercel/remix": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "invariant": "^2.2.4",
-    "isbot": "^3.6.8",
+    "isbot": "^3.7.0",
     "marked": "^9.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,12 +31,12 @@
     "@remix-run/dev": "^2.0.1",
     "@remix-run/eslint-config": "^2.0.1",
     "@types/bcryptjs": "^2.4.4",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "eslint": "^8.38.0",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
+    "eslint": "^8.50.0",
     "prisma": "^5.3.1",
     "tsx": "^3.13.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
